--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Home Page</title>
     </head>
     <body>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <p>This website is under development by Samman Das</p>
     </body>
 </html>
