--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home Page</title>
-    </head>
-    <body>
+        <link rel="stylesheet" href="index_style.css">
+        </head>
+        <body>
+        <header class="header">
+            <a href="index.html" class="logo">Samman Das</a>
+
+            <nav class="navbar">
+                <a href="">Home</a>
+                <a href="">About Me</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+            </nav>
+        </header>
+        <section class="home">
+            <div class="home-img">
+
+            </div>
+            <div class="home-content">
+                <h1>Hi, I am <span>Samman Das</span></h1>
+                <h3 class="typing-text">Engineering Student</h3>
+                <p>Welcome! I'm an Engineering Student with a passion for innovation and research. From AI-driven projects to smart home concepts, I’m constantly exploring new ways to merge technology with creativity. With a strong foundation in problem-solving and hands-on experience, I’m dedicated to shaping ideas into impactful realities.</p>
+        <div class="social-icons">
+        <a href=""><img src="images/5296765_camera_instagram_instagram logo_icon.png" class="instagram"></a>
+        <a href=""><img src="images/5296501_linkedin_network_linkedin logo_icon.png" class="linkedin"></a>
+        <a href=""><img src="images/317712_code repository_github_repository_resource_icon.png" class="github"></a>
+        </div>
+    </div>
+    </section>
         <p>This website is under development by Samman Das</p>
     </body>
 </html>
