--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
             </div>
             <div class="home-content">
-                <h1>Hi, I am <span>Samman Das</span></h1>
-                <h3 class="typing-text">Engineering Student</h3>
-                <p>Welcome! I'm an Engineering Student with a passion for innovation and research. From AI-driven projects to smart home concepts, I’m constantly exploring new ways to merge technology with creativity. With a strong foundation in problem-solving and hands-on experience, I’m dedicated to shaping ideas into impactful realities.</p>
+                <h1><span></span></h1>
+                <h3 class="typing-text">Website is Under Maintainence. Come back soon ;)</h3>
         <div class="social-icons">
         <a href=""><img src="images/5296765_camera_instagram_instagram logo_icon.png" class="instagram"></a>
         <a href=""><img src="images/5296501_linkedin_network_linkedin logo_icon.png" class="linkedin"></a>
