--- a/index.html
+++ b/index.html
@@ -5,32 +5,53 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home Page</title>
         <link rel="stylesheet" href="index_style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Enriqueta:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ms+Madi&family=Pacifico&display=swap" rel="stylesheet">
         </head>
-        <body>
-        <header class="header">
-            <a href="index.html" class="logo">Samman Das</a>
-
-            <nav class="navbar">
-                <a href="">Home</a>
-                <a href="">About Me</a>
-                <a href="">Blog</a>
-                <a href="">Contact</a>
-            </nav>
-        </header>
-        <section class="home">
-            <div class="home-img">
-
+    <body>
+        <div style="width: 100%; height: 100%; position: relative; background: #FFF4EA">
+            <img style="width: 1519px; height: 826px; left: 0px; top: 90px; position: absolute" src="images/pexels-aulsh99-2882660 1.png" />
+            <div style="width: 1516px; height: 216px; left: 0px; top: 1484px; position: absolute; background: #A8EAD5"></div>
+            <div style="width: 1519px; height: 90px; left: 0px; top: 0px; position: absolute; background: #FFF4EA"></div>
+            <div style="width: 244px; height: 154px; left: 200px; top: -32px; position: absolute"><span style="color: #0096D1; font-size: 12px; font-family: Ms Madi; font-weight: 400; word-wrap: break-word"><br/><br/></span><span style="color: #0096D1; font-size: 48px; font-family: Ms Madi; font-weight: 400; word-wrap: break-word">Samman Das</span></div>
+            <div style="width: 210px; height: 168px; left: 1309px; top: 419px; position: absolute">
+                <div style="width: 210px; height: 84px; left: 0px; top: 0px; position: absolute">
+                    <div style="width: 210px; height: 84px; left: 0px; top: 0px; position: absolute; background: #A8EAD5"></div>
+                    <div style="left: 11px; top: 0px; position: absolute"><span style="color: #FFF4EA; font-size: 48px; font-family: Pacifico; font-weight: 400; word-wrap: break-word">Welcome</span><span style="color: #FFF4EA; font-size: 48px; font-family: Ms Madi; font-weight: 400; word-wrap: break-word"> </span></div>
+                </div>
+                <div style="width: 124px; height: 84px; left: 86px; top: 84px; position: absolute">
+                    <div style="width: 124px; height: 84px; left: 0px; top: 0px; position: absolute; background: #A8EAD5"></div>
+                    <div style="width: 95px; height: 84px; left: 14px; top: 0px; position: absolute; color: #FFF4EA; font-size: 48px; font-family: Pacifico; font-weight: 400; word-wrap: break-word">I am </div>
+                </div>
             </div>
-            <div class="home-content">
-                <h1><span></span></h1>
-                <h3 class="typing-text">Website is Under Maintainence. Come back soon ;)</h3>
-        <div class="social-icons">
-        <a href=""><img src="images/5296765_camera_instagram_instagram logo_icon.png" class="instagram"></a>
-        <a href=""><img src="images/5296501_linkedin_network_linkedin logo_icon.png" class="linkedin"></a>
-        <a href=""><img src="images/317712_code repository_github_repository_resource_icon.png" class="github"></a>
+            <div style="width: 645px; height: 128px; left: 0px; top: 788px; position: absolute">
+                <div style="width: 645px; height: 106px; left: 0px; top: 22px; position: absolute; background: #A8EAD5"></div>
+                <div style="left: 30px; top: 0px; position: absolute; color: #FFF4EA; font-size: 96px; font-family: Enriqueta; font-weight: 400; word-wrap: break-word">Samman Das</div>
+            </div>
+            <div style="width: 448px; left: 966px; top: 952px; position: absolute; color: #0096D1; font-size: 24px; font-family: Courgette; font-weight: 400; word-wrap: break-word">A curious mind blending technology with creativity. From exploring SQL and geospatial data to diving into the aesthetics of life, I’m passionate about learning, experimenting, and sharing what I discover. Let’s create something extraordinary.</div>
+            <div style="width: 660px; height: 103px; left: 30px; top: 1514px; position: absolute">
+                <div style="width: 47.70px; height: 48px; left: 0px; top: 55px; position: absolute">
+                    <img style="width: 47.70px; height: 48px; left: -0px; top: -0px; position: absolute;" src="images/LinkedIn.png"/>
+                </div>
+                <div style="width: 47.70px; height: 48px; left: 79.50px; top: 55px; position: absolute">
+                    <img style="width: 47.67px; height: 47.99px; left: 0px; top: 0px; position: absolute" src="images/Instagram.png"/>
+                </div>
+                <div style="width: 47.70px; height: 48px; left: 159px; top: 55px; position: absolute">
+                    <img style="width: 47.70px; height: 47.82px; left: 0px; top: 0px; position: absolute" src="images/github.png"/>
+                </div>
+                <div style="width: 47.70px; height: 48px; left: 238.50px; top: 55px; position: absolute">
+                    <img style="width: 47.70px; height: 47.20px; left: 0px; top: 0px; position: absolute" src="images/facebook.png"/>
+                </div>
+                <div style="width: 660px; height: 37px; left: 0px; top: 0px; position: absolute; color: black; font-size: 32px; font-family: Enriqueta; font-weight: 400; word-wrap: break-word">Come connect with me across all platforms</div>
+            </div>
+            <div style="width: 194px; height: 39px; left: 661px; top: 1661px; position: absolute; color: #3EBDC6; font-size: 20px; font-family: Enriqueta; font-weight: 400; word-wrap: break-word">© 2025 Samman Das</div>
         </div>
-    </div>
-    </section>
-        <p>This website is under development by Samman Das</p>
     </body>
 </html>
